--- a/public/stylesheets/slippry.css
+++ b/public/stylesheets/slippry.css
@@ -319,7 +319,7 @@
     -webkit-border-radius: 50%;
     border-radius: 50%; }
     .sy-pager li.sy-active a {
-      background-color: #9276ff; }
+      background-color: #0bb282; }
     .sy-pager li a {
       width: 100%;
       height: 100%;
